impower-dev/src/public/document.css
@font-face {
  font-family: "Courier Prime Sans";
  font-weight: 400;
  font-display: block;
  src: url("/fonts/courier-prime-sans.ttf") format("truetype");
}

@font-face {
  font-family: "Courier Prime Sans";
  font-weight: 700;
  font-display: block;
  src: url("/fonts/courier-prime-sans-bold.ttf") format("truetype");
}

@font-face {
  font-family: "Courier Prime Sans";
  font-style: italic;
  font-weight: 400;
  font-display: block;
  src: url("/fonts/courier-prime-sans-italic.ttf") format("truetype");
}

@font-face {
  font-family: "Courier Prime Sans";
  font-style: italic;
  font-weight: 700;
  font-display: block;
  src: url("/fonts/courier-prime-sans-bold-italic.ttf") format("truetype");
}

@font-face {
  font-family: "Courier Prime";
  font-weight: 400;
  font-display: block;
  src: url("/fonts/courier-prime.ttf") format("truetype");
}

@font-face {
  font-family: "Courier Prime";
  font-weight: 700;
  font-display: block;
  src: url("/fonts/courier-prime-bold.ttf") format("truetype");
}

@font-face {
  font-family: "Courier Prime";
  font-style: italic;
  font-weight: 400;
  font-display: block;
  src: url("/fonts/courier-prime-italic.ttf") format("truetype");
}

@font-face {
  font-family: "Courier Prime";
  font-style: italic;
  font-weight: 700;
  font-display: block;
  src: url("/fonts/courier-prime-bold-italic.ttf") format("truetype");
}

:root {
  color-scheme: dark;
  --screenplay-preview-texture: url("/noisetexture.png");
  /* Environment Safe Areas */
  --safe-top: env(safe-area-inset-top, 0px);
  --safe-bottom: env(safe-area-inset-bottom, 0px);
  /* Fixed heights */
  --navbar-height: 60px;
  /* Updated by JS */
  --cm-top-offset: 0px;
  --cm-bottom-offset: 0px;
  --cm-keyboard-height: 0px;
  --vv-offset-top: 0px;
  --vv-height: 100vh;
  --navbar-display: flex;
}

* {
  overscroll-behavior: none;
  touch-action: pan-y;
}

html,
body {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;

  width: 100%;
  height: 100%;

  overflow: clip;
  overscroll-behavior: none;

  display: flex;
  flex-direction: column;

  padding: 0;
  margin: 0;

  font-family: var(--theme-font-sans);
}

main {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;

  width: 100%;
  height: 100%;

  overflow: clip;
  overscroll-behavior: none;

  display: flex;
  flex-direction: column;

  padding: 0;
  margin: 0;
}

header {
  display: none;

  position: fixed;
  left: 0;
  right: 0;
  top: 0;

  width: 100%;

  z-index: 9999;

  /* CRITICAL: Prevents iOS from applying its own weird offsets */
  will-change: transform;
  transition: transform 0.05s linear;

  /* Position according to visual viewport */
  padding-top: var(--safe-top);
  transform: translate3d(0, var(--vv-offset-top), 0);

  /* Visual Polish */
  background-color: blueviolet;
  text-align: center;
}
.keyboard-open header {
  background-color: lightseagreen;
}

footer {
  display: none;

  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;

  width: 100%;

  z-index: 9999;

  /* CRITICAL: Prevents iOS from applying its own weird offsets */
  will-change: transform;
  transition: transform 0.05s linear;

  /* Position according to visual viewport */
  padding-bottom: var(--safe-bottom);

  /* Visual Polish */
  background-color: blueviolet;
  text-align: center;
}
.keyboard-open footer {
  background-color: lightseagreen;
}
/* Responsive Footer Transform Logic */
.ios footer {
  top: 0;
  bottom: auto;
  /* On iOS, shift down relative to the visual viewport height */
  transform: translateY(calc(var(--vv-offset-top) + var(--vv-height) - 100%));
}
.android footer {
  bottom: 0;
  top: auto;
  /* On Android, when keyboard is closed, shift up by the navbar height */
  transform: translateY(calc(-1 * var(--navbar-height)));
}
.android.keyboard-open footer {
  /* On Android, when keyboard is open, shift up by keyboard height */
  transform: translateY(calc(-1 * var(--cm-keyboard-height)));
}

input,
textarea {
  overscroll-behavior: none;
}

.picker * {
  pointer-events: auto;
}

.cm-context-menu {
  background-color: var(--theme-color-panel);
}

